src/test/deca/codegen/valid/SO/compareFloatAndInt.deca
// Description:
//    Egalité int float
//
// Resultats: OK
//    
//
// Historique:
//    cree le 12/01/2022

{
    float f = 1.0;
    int i = 1;
    boolean b = (f == i);
    if (b){
        println("OK");
    }
    else{
        println("Problem");
    }
}